# MixedGemm

./: CMakeLists.txt  README.md  bench_fp4.cu  bench_fp6.cu  bench_fp8.cu  bench_gemm.cu  bench_reorder.cu  bench_reorder_gemm.cu  fp4.cu  fp6.cu  fp8.cu  gemm.cu  main.py  makerun.sh
.ipynb_checkpoints/: CMakeLists-checkpoint.txt  README-checkpoint.md  bench_fp4-checkpoint.cu  bench_fp6-checkpoint.cu  bench_fp8-checkpoint.cu  bench_gemm-checkpoint.cu  fp4-checkpoint.cu  fp6-checkpoint.cu  fp8-checkpoint.cu  gemm-checkpoint.h  main-checkpoint.py
include/: fp6.h  fp8.h  gemm.h  reorder.cuh
include/.ipynb_checkpoints/: mxdtype-checkpoint.h
src/: bindings.cpp  fp4.cu  fp6.cu  fp8.cu  gemm.cu  reorder.cu
src/.ipynb_checkpoints/: bindings-checkpoint.cpp  gemm-checkpoint.cu  reorder-checkpoint.cu
